# rfm_simulation

./: CMakeLists.txt  README.md  installdep  notes.txt  package.xml
launch/: minimal_simulation.launch  navigate.launch  simulation.launch  slam.launch
maps/: lobby.pgm  lobby.yaml  small_map.pgm  small_map.yaml
models/lobby/: model.config  model.sdf
rviz/: navigate.rviz
scripts/: fake_battery.py
worlds/: lobby.world  office.world
