<?xml version="1.0"?>
<package format="2">
  <name>rfm_simulation</name>
  <version>0.0.0</version>
  <description>The rfm_simulation package</description>
  <maintainer email="juan@todo.todo">juan</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>turtlebot_gazebo</exec_depend>
  <exec_depend>turtlebot_navigation</exec_depend>
  <exec_depend>yocs_velocity_smoother</exec_depend>
  <exec_depend>hector_sensors_description</exec_depend>
</package>
